#
set(CONTROLLER_SOURCES
  cMode.cpp
  cDistMode1.cpp
  cDistMode2.cpp
  cRectMode1.cpp
  cRectMode2.cpp
  cController.cpp
  percentage.cpp
  )
#
add_library(hd_controller
  STATIC
  ${CONTROLLER_SOURCES}
  )
#
target_compile_definitions(hd_controller
  PRIVATE
  HEATER_PIN=${HEATER_PIN}
)
#
target_link_libraries(hd_controller
  hardware_i2c
  pico_stdlib
  hd_ds18b20
  hd_display
  hd_heater
  )
